# mjquiz

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  MANIFEST.in  Makefile  README.md  Taskfile.yml  docker-compose.yml  docker-test.sh  project.md  pyproject.toml  render.yaml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
minecraft_quiz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
quiz/: __init__.py  anwendung.py  datenbank.py  questions.txt  quiz_lader.py
quiz/data/: highscores.txt  questions.txt
quiz/templates/: base.html  index.html  quiz.html  results.html
